test/ui/tests/packages/invalid-package-and-component-names/package.metadata
# TEST fail check

name: "???",
version: "0.0.0",

components: [
    {
        name: "of",
        type: "executable",
        path: "",

        dependencies: {
            "0//": { component: "hey there", package: "-e" },
            "": { provider: "distribution" },
            data: {},
        },
    },
],
