test/ui/tests/packages/invalid-package-and-component-names/package.stderr
error[E036]: the package name `???` is not a valid word
 --> ${DIRECTORY}/packages/invalid-package-and-component-names/package.metadata:3:8
  |
3 | name: "???",
  |        ^^^ 
  |

error[E036]: the component name `of` is not a valid word
 --> ${DIRECTORY}/packages/invalid-package-and-component-names/package.metadata:8:16
  |
8 |         name: "of",
  |                ^^ 
  |

error[E036]: the component name `0//` is not a valid word
  --> ${DIRECTORY}/packages/invalid-package-and-component-names/package.metadata:13:14
   |
13 |             "0//": { component: "hey there", package: "-e" },
   |              ^^^ 
   |

error[E036]: the component name `hey there` is not a valid word
  --> ${DIRECTORY}/packages/invalid-package-and-component-names/package.metadata:13:34
   |
13 |             "0//": { component: "hey there", package: "-e" },
   |                                  ^^^^^^^^^ 
   |

error[E036]: the package name `-e` is not a valid word
  --> ${DIRECTORY}/packages/invalid-package-and-component-names/package.metadata:13:56
   |
13 |             "0//": { component: "hey there", package: "-e" },
   |                                                        ^^ 
   |

error[E036]: the component name `` is not a valid word
  --> ${DIRECTORY}/packages/invalid-package-and-component-names/package.metadata:14:14
   |
14 |             "": { provider: "distribution" },
   |             >< 
   |

error[E036]: the component name `data` is not a valid word
  --> ${DIRECTORY}/packages/invalid-package-and-component-names/package.metadata:15:13
   |
15 |             data: {},
   |             ^^^^ 
   |

error: aborting due to 7 previous errors
 note: the error E036 has a detailed explanation
 help: run `lushui explain E036` to view it

